ENTREGA_P3_OPCIONAL_CODIGO_INTERMEDIO/P3_OPCIONAL_MARCO_GARCIA_PABLO_ROIG/tests/valid/10_overload_numeric_promotion.lava
int choose(int value) {
  return value;
}

float choose(float value) {
  return value;
}

float result = choose(1) + choose(2.5);
boolean ok = result >= 3.5;
