ENTREGA_P3_OPCIONAL_CODIGO_INTERMEDIO/P3_OPCIONAL_MARCO_GARCIA_PABLO_ROIG/tests/invalid/24_invalid_function_call_type.lava
int sum(int a, int b) {
  return a + b;
}

int value = sum(1, true);
